# datahub-action-access-provisioner

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
action_access_provisioner/: __init__.py  access_provisioner_action.py  config.py  constants.py  email.py  gql_types.py  graphql.py  models.py  snowflake.py
examples/: example_action.yaml  example_workflow_form_fields.md
scripts/: setup_workflow.py
tests/: test_access_provisioner_action.py  test_email.py  test_graphql.py  test_snowflake.py  test_snowflake_state.py
